--- a/_config.yml
+++ b/_config.yml
@@ -214,7 +214,8 @@ font:
 # Value is the target link (E.g. GitHub: https://github.com/iissnan)
 #social:
   #LinkLabel: Link
-
+  GitHub: https://github.com/HanPeizhi
+  
 
 # Social Links Icons
 # Icon Mapping:
