--- a/_config.yml
+++ b/_config.yml
@@ -5,8 +5,8 @@
 
 # Site
 title: 韩培智
-subtitle:
-description:
+subtitle: Han's Blog
+description:  
 author: Han Peizhi
 # Support language: de, en, fr-FR, id, ja, ko, pt-BR, pt, ru, zh-Hans, zh-hk, zh-tw
 language: zh-Hans
@@ -16,7 +16,7 @@ date_format: '%Y-%m-%d'
 ## If your site is put in a subdirectory, set url as 'http://yoursite.com' and baseurl as '/child'
 url:
 baseurl:
-permalink: pretty
+permalink: /:year/:month/:day/:title/
 
 # Pagination
 paginate: 10
@@ -75,7 +75,7 @@ plugins:
 # ---------------------------------------------------------------
 
 # Put your favicon.ico into `assets/` directory.
-favicon: /assets/favicon.ico
+favicon: /assets/images/author.jpeg
 
 # Set default keywords (Use a comma to separate)
 keywords: "Jekyll, NexT"
