--- a/_config.yml
+++ b/_config.yml
@@ -5,8 +5,8 @@
 
 # Site
 title: 韩培智
-subtitle:
-description:
+subtitle: Han's Blog
+description: 少年终日倚榻，夕惰睡，无他。
 author: Han Peizhi
 # Support language: de, en, fr-FR, id, ja, ko, pt-BR, pt, ru, zh-Hans, zh-hk, zh-tw
 language: zh-Hans
