--- a/_config.yml
+++ b/_config.yml
@@ -382,7 +382,7 @@ han: false
 
 # Disqus
 disqus:
-  enable: false
+  enable: true
   shortname:
   count: true
   # hide comments (visitors need to click to load the comments)
