--- a/_config.yml
+++ b/_config.yml
@@ -378,12 +378,12 @@ han: false
 #baidu_analytics:
 
 # Duoshuo ShortName
-#duoshuo_shortname:
+duoshuo_shortname: Han Peizhi
 
 # Disqus
 disqus:
   enable: true
-  shortname:
+  shortname: Han Peizhi
   count: true
   # hide comments (visitors need to click to load the comments)
   # count need to be false when hide is true
