--- a/_config.yml
+++ b/_config.yml
@@ -123,7 +123,7 @@ menu:
   tags: /tags/
   #sitemap: /sitemap.xml
   #commonweal: /404.html
-  poem: /poem
+  poem: /poem/
 
 
 # Enable/Disable menu icons.
