--- a/_config.yml
+++ b/_config.yml
@@ -337,6 +337,14 @@ post_copyright:
   license_url: https://creativecommons.org/licenses/by-nc-sa/3.0/
 
 
+# ---------------------------------------------------------------
+# 开启打赏功能
+# ---------------------------------------------------------------
+
+reward_comment: 打赏链接还是要有的，万一真的有人打赏呢。
+wechatpay: /pic/wechat-reward-image
+#alipay: /path/to/alipay-reward-image
+
 
 # ---------------------------------------------------------------
 # Misc Theme Settings
