--- a/_config.yml
+++ b/_config.yml
@@ -342,7 +342,7 @@ post_copyright:
 # ---------------------------------------------------------------
 
 reward_comment: 打赏链接还是要有的，万一真的有人打赏呢。
-wechatpay: /wechat-reward-image.png
+wechatpay: /pic/wechat-reward-image.png
 #alipay: /path/to/alipay-reward-image
 
 
