--- a/_config.yml
+++ b/_config.yml
@@ -391,7 +391,7 @@ han: false
 
 # Disqus
 disqus:
-  enable: false
+  enable: true
   shortname: Han Peizhi
   count: true
   # hide comments (visitors need to click to load the comments)
