--- a/_config.yml
+++ b/_config.yml
@@ -341,7 +341,7 @@ post_copyright:
 # 开启打赏功能
 # ---------------------------------------------------------------
 
-reward_comment: 打赏链接还是要有的，万一真的有人打赏呢。
+reward_comment: 您的打赏，是我最大的动力。感谢每一位支持者。
 wechatpay: /pic/wechat-reward-image.png
 #alipay: /path/to/alipay-reward-image
 
