--- a/_config.yml
+++ b/_config.yml
@@ -392,7 +392,7 @@ han: false
 # Disqus
 disqus:
   enable: true
-  shortname: Han Peizhi
+  shortname: hanpeizhi-github-io
   count: true
   # hide comments (visitors need to click to load the comments)
   # count need to be false when hide is true
