--- a/_config.yml
+++ b/_config.yml
@@ -217,7 +217,7 @@ social:
   #LinkLabel: Link
   GitHub: https://github.com/HanPeizhi
   新浪博客: http://blog.sina.com.cn/u/2145408284
-  CSDN博客：https://blog.csdn.net/sinat_20593627
+  CSDN博客: https://blog.csdn.net/sinat_20593627
 
 # Social Links Icons
 # Icon Mapping:
@@ -232,7 +232,7 @@ social_icons:
   #Twitter: twitter
   #Weibo: weibo
   新浪博客: weibo
-  CSDN博客：crosshairs
+  CSDN博客: book
 
 # Sidebar Avatar
 # in directory: /assets/images/avatar.gif
@@ -508,9 +508,9 @@ leancloud_visitors:
 # Get more information on http://ibruce.info/2015/04/04/busuanzi/
 busuanzi_count:
   # count values only if the other configs are false
-  enable: false
+  enable: true
   # custom uv span for the whole site
-  site_uv: true
+  site_uv: false
   site_uv_header: <i class="fa fa-user"></i>
   site_uv_footer:
   # custom pv span for the whole site
