--- a/_config.yml
+++ b/_config.yml
@@ -269,8 +269,8 @@ sidebar:
   #  - hide    expand only when click on the sidebar toggle icon.
   #  - remove  Totally remove sidebar including sidebar toggle.
   #display: post
-  display: always
-  #display: hide
+  #display: always
+  display: hide
   #display: remove
 
   # Sidebar offset from top menubar in pixels.
@@ -518,7 +518,7 @@ busuanzi_count:
   site_pv_header: <i class="fa fa-eye"></i>
   site_pv_footer:
   # custom pv span for one page only
-  page_pv: true
+  page_pv: false
   page_pv_header: <i class="fa fa-file-o"></i>
   page_pv_footer:
 
